# LoRA_Learning

./: README.md  data.json  merge_lora.py  pyproject.toml  test_result.py  train_lora.py
qwen3.5-0.8b-lora-data/: README.md  tokenizer_config.json
qwen3.5-0.8b-lora-data/checkpoint-11/: adapter_model.safetensors  rng_state.pth  scheduler.pt  trainer_state.json
qwen3.5-0.8b-lora-data/checkpoint-22/: README.md  adapter_config.json  adapter_model.safetensors  rng_state.pth  scheduler.pt  trainer_state.json
qwen3.5-0.8b-lora-data/checkpoint-33/: adapter_model.safetensors  rng_state.pth  scheduler.pt  trainer_state.json
